WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219950
[selectors] Default namespace gets ignored inside non-type selectors for :is() and :not()
https://bugs.webkit.org/show_bug.cgi?id=219950
Summary
[selectors] Default namespace gets ignored inside non-type selectors for :is(...
Manuel Rego Casasnovas
Reported
2020-12-16 09:17:33 PST
Spec:
https://drafts.csswg.org/selectors-4/#matches
Default namespace declarations do not affect the compound selector representing the subject of any selector within a :is() or :not() pseudo-class, unless that compound selector contains an explicit universal selector or type selector. There are two WPT tests failing on WebKit due to this: *
https://wpt.fyi/results/css/selectors/is-default-ns-002.html
*
https://wpt.fyi/results/css/selectors/not-default-ns-002.html
Attachments
Patch
(7.49 KB, patch)
2020-12-17 09:24 PST
,
Manuel Rego Casasnovas
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2020-12-16 15:08:57 PST
This has been fixed in Chromium in the following commits: *
https://chromium-review.googlesource.com/c/chromium/src/+/2489891
*
https://chromium-review.googlesource.com/c/chromium/src/+/2489647
Manuel Rego Casasnovas
Comment 2
2020-12-17 09:24:50 PST
Created
attachment 416427
[details]
Patch
EWS
Comment 3
2020-12-17 15:22:24 PST
Committed
r270955
: <
https://trac.webkit.org/changeset/270955
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416427
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-12-17 15:23:17 PST
<
rdar://problem/72443424
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug