[selectors] Default namespace gets ignored inside non-type selectors for :is() and :not() https://bugs.webkit.org/show_bug.cgi?id=219950

Reviewed by Antti Koivisto.

Source/WebCore:

Based on Blink r820500 and r820557 by <andruud@chromium.org>.

Default namespace declarations do not affect the compound selector
representing the subject of any selector within a :is() or :not() pseudo-class,
unless that compound selector contains an explicit universal selector or type selector.
Spec: https://drafts.csswg.org/selectors-4/#matches

This patch aligns WebKit implementation with Chromium and Firefox, so two WPT tests pass now.

* css/parser/CSSSelectorParser.cpp:
(WebCore::atEndIgnoringWhitespace):
(WebCore::CSSSelectorParser::consumeCompoundSelector):
(WebCore::CSSSelectorParser::consumePseudo):
(WebCore::CSSSelectorParser::defaultNamespace const):
* css/parser/CSSSelectorParser.h:

LayoutTests:

* TestExpectations: Two WPT tests pass now.


Canonical link: https://commits.webkit.org/232578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270955 268f45cc-cd09-0410-ab3c-d52691b4dbfc